# pingwatch

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-18-pingwatch.md
docs/superpowers/specs/: 2026-07-18-pingwatch-design.md
scripts/: gen-icon.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  gateway.rs  lib.rs  main.rs  ollama.rs  session.rs
src-tauri/src/ping/: mod.rs  unix.rs  windows.rs
src/components/: AiExportModal.tsx  AnalysisPanel.tsx  CompareView.tsx  ControlBar.tsx  Dashboard.tsx  LiveChart.tsx  OllamaSetup.tsx  SpikeLog.tsx  StatCard.tsx  TargetManager.tsx  UpdateBanner.tsx
src/lib/: aiExport.test.ts  aiExport.ts  align.test.ts  align.ts  findings.test.ts  findings.ts  format.ts  ipc.ts  localAi.test.ts  localAi.ts  mockIpc.ts  stats.test.ts  stats.ts  types.ts
src/state/: store.ts
