[package]
name = "pingwatch"
version = "0.1.0"
description = "Network latency monitor with live dashboards and cross-machine session comparison"
authors = ["PingWatch contributors"]
edition = "2021"

[lib]
name = "pingwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
netdev = "0.38"

[target.'cfg(unix)'.dependencies]
socket2 = "0.6"

[target.'cfg(windows)'.dependencies]
winping = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
